--- a/base.html
+++ b/base.html
@@ -144,7 +144,7 @@
           <div class="card p-3">
             <h5>Kamfort, Kamfort+, Elektro</h5>
             <small>BYD e2</small>
-            <img src="./e2.png" class="card-img-top mt-2">
+            <img src="./bydchazor.png" class="card-img-top mt-2">
           </div>
         </div>
         <div class="col-md-4">
