--- a/index4.html
+++ b/index4.html
@@ -156,6 +156,31 @@ TMT TAXI o‘z faoliyatini 2002-yilda boshlagan. O‘sha davrda, bozor notinch v
 <br><br>✅ Biz esa, o‘z qadriyatlarimizga sodiq qoldik: haydovchilar bilan insoniy munosabat xizmat sifati va xavfsizlikka jiddiy e’tibor tizimli va barqaror o‘sish Bugungi kunda TMT TAXI — bu haydovchilar va mijozlar orasida ishonchli nomga aylangan, o‘z yo‘lini bosib o‘tgan mustahkam brenddir.    </p>
   </div>
 </section>
+<section class="py-5 bg-white">
+  <div class="container">
+    <h1 class="display-4 fw-semibold mb-4">🏁 Nima uchun aynan TMT TAXI?</h1>
+    <div class="row">
+        <div class="col-md-6">
+            <h3>🚖 TMT – bu ishonchli xizmat, qulay shartlar va yuridik kafolatlar!</h3>
+            <p class="mt-4 lead">🏛 TMT YURIDIK KONSULTATSIYA XIZMATI</p>
+            <p class="mt-4">✅ Haydovchilar va avtomobil egalari uchun bepul huquqiy maslahat</p>
+            <p class="mt-4">✅ Yo‘l harakati qoidalari, jarimalar va ruxsatnomalar bo‘yicha yordam</p>
+            <p class="mt-4">✅ Avtomobil hujjatlarini rasmiylashtirish va shartnoma masalalarida ko‘mak</p>
+            <p class="mt-4">✅ Sug‘urta, lizing va kredit shartlarini tushuntirish</p>
+            <p class="mt-4">✅ Huquqlaringizni himoya qilish uchun malakali yuristlar yordami</p>
+        </div>
+        <div class="col-md-6">
+            <h3>🎁 TMT BONUSLARI VA IMTIYOZLARI</h3>
+            <p class="mt-4 lead">🔥 TMT TAXI bilan ishlovchi haydovchilar uchun maxsus imkoniyatlar:</p>
+            <p class="mt-4">✅ Haydovchilar va avtomobil egalari uchun bepul huquqiy maslahat</p>
+            <p class="mt-4">✅ Avtomobil ehtiyot qismlariga va servis xizmatlariga chegirmalar</p>
+            <p class="mt-4">✅ Haftalik va oylik mukofot pullari eng faol haydovchilar uchun</p>
+            <p class="mt-4">✅ Doimiy haydovchilarga yillik bonuslar va sovg‘alar</p>
+            <p class="mt-4">✅ Yuridik va buxgalteriya masalalarida tekin maslahatlar</p>
+        </div>
+    </div>
+  </div>
+</section>
 <section class="py-5 bg-light">
   <div class="container">
     <h1 class="display-4 fw-bold mb-4">🏆 Bizning muvaffaqiyatimiz siri — haydovchiga hurmat, ishonch va tizimlilik</h1>
@@ -177,66 +202,6 @@ TMT TAXI o‘z faoliyatini 2002-yilda boshlagan. O‘sha davrda, bozor notinch v
     <p>Ko‘plab haydovchilar biz haqimizda ijtimoiy tarmoqlarda minnatdorchilik bildiradi, sharhlar yozadi, bizni tanlaydi. Biz esa ularning har bir so‘zini qadrlaymiz.
     <br>🟢 TMT TAXI — bu nafaqat xizmat, balki insoniy yondashuv, hurmat va hamkorlikdir. Biz ishonchni birinchi o‘ringa qo‘yamiz — aynan shu narsa bizni ajratib turadi.
     </p>
-  </div>
-</section>
-<section class="py-5">
-  <div class="container">
-    <!-- Sarlavha -->
-    <h1 class="display-4 fw-bold mb-4">✅ Nima uchun aynan TMT TAXI?</h1>
-
-    <!-- Paragraflar -->
-    <p class="lead">
-        💼 Biz bilan ishlash — foydali, oson va ishonchli!
-    </p>
-
-    <p class="mt-3">
-Har yili TMT TAXI yanada ko‘proq haydovchilar uchun qulay va foydali ish maydoniga aylanmoqda. Biz taksi bozorida oddiy ijara emas, balki uzoq muddatli, barqaror hamkorlikni taklif qilamiz.
-    </p>
-      <p class="lead">
-🚘 Depozitsiz avtomobil ijarasi
-    </p>
-
-    <p class="mt-3">
-Bizda kafolat puli talab qilinmaydi — siz mashinani to‘g‘ridan-to‘g‘ri ish uchun olib, darhol daromad topishni boshlaysiz!
-    </p>
-          <p class="lead">
-💳 To‘lovlarsiz avtomobil xaridi    </p>
-
-    <p class="mt-3">
-aksi uchun avtomobilni ijarada yurib, keyin foydali shartlar bilan xarid qilish imkoniyati mavjud. Bu jarayon:
-
-❌ Dastlabki to‘lovlarsiz
-
-❌ Yashirin yig‘imlarsiz
-
-❌ Depozitsiz
-
-    </p>
-          <p class="lead">
-🤝 Biznes hamkorlik — ishonch asosida
-    </p>
-
-    <p class="mt-3">
-Agar siz uzoq muddatli va halol ish izlayotgan bo‘lsangiz, TMT TAXI — bu siz uchun ideal tanlov.
-
-📌 Biz sizga:
-
-Qulay shartlar
-
-Halol hisob-kitob
-
-Insoniy munosabat
-
-Doimiy texnik va huquqiy qo‘llab-quvvatlashni taklif qilamiz.
-    </p>
-          <p class="lead">
-🟢 TMT TAXI — sizning kelajagingizga ishonchli yo‘l!
-    </p>
-
-    <p class="mt-3">
-📞 Bugunoq biz bilan bog‘laning va shartlarni o‘zingiz ko‘ring!    </p>
-    <!-- Bo'sh joy -->
-    <div class="my-5"></div>
   </div>
 </section>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
