--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
         </div>
       </div>
       <div class="col">
-        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray; background: lightgray;">
           <div class="card-body">
             <p class="text-muted small">Elekto</p>
             <p class="text-muted small">JADVAL 6/1</p>
-            <h5 class="card-title fw-bold">BVD E2</h5>
-            <p class="mb-2">Kuniga 482 000 so'm</p>
+            <h5 class="card-title fw-bold">chery</h5>
+            <p class="mb-2">Kuniga 440 756 so'm</p>
           </div>
           <img src="./byde2.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
@@ -257,12 +257,12 @@
 
       <!-- Card 3 -->
       <div class="col">
-        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray; background: lightgray;">
           <div class="card-body">
             <p class="text-muted small">kamfort +</p>
             <p class="text-muted small">JADVAL 6/1</p>
             <h5 class="card-title fw-bold">Jac j7</h5>
-            <p class="mb-2">Kuniga 485 000 so'm</p>
+            <p class="mb-2">Kuniga 434 500 so'm</p>
           </div>
           <img src="./jacj7.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
@@ -299,12 +299,12 @@
         </div>
       </div>
       <div class="col">
-        <div class="card h-100 text-center" style="border: 1px solid lightgray;">
+        <div class="card h-100 text-center" style="border: 1px solid lightgray; background: lightgray;">
           <div class="card-body">
             <p class="text-muted small">Biznes</p>
             <p class="text-muted small">JADVAL 6/1</p>
             <h5 class="card-title fw-bold">BYD chazor</h5>
-            <p class="mb-2">Kuniga 532 000 so'm</p>
+            <p class="mb-2">Kuniga 554 851 so'm</p>
           </div>
           <img src="./chazor.png" class="card-img-bottom img-fluid" alt="Hyundai Solaris">
         </div>
@@ -448,12 +448,12 @@
       <!-- Natija qismi -->
       <div class="col-md-6 d-flex">
         <div class="w-50 bg-warning text-black p-4 d-flex flex-column justify-content-center">
-          <h5 class="fw-semibold">Start</h5>
+          <h5 class="fw-semibold">kamfort</h5>
           <p class="mt-4 mb-1">Sizning daromadingiz</p>
           <h2 class="fw-bold" id="eco-income">160 392 ₽</h2>
         </div>
         <div class="w-50 bg-black text-white p-4 d-flex flex-column justify-content-center">
-          <h5 class="fw-semibold">Kamfort</h5>
+          <h5 class="fw-semibold">Biznes</h5>
           <p class="mt-4 mb-1">Sizning daromadingiz</p>
           <h2 class="fw-bold" id="comfort-income">189 120 ₽</h2>
         </div>
@@ -471,8 +471,8 @@
   let selectedDays = 6;     // boshlang'ich 6 kun
   let selectedHours = 9;    // boshlang'ich 9 soat
 
-  const ecoRate = 60000;     // Start: 50 000 so‘m/soat
-  const comfortRate = 70000; // Comfort: 60 000 so‘m/soat
+  const ecoRate = 60000;     // Start: 60 000 so‘m/soat
+  const comfortRate = 75000; // Comfort: 75 000 so‘m/soat
 
   const ecoOutput = document.getElementById('eco-income');
   const comfortOutput = document.getElementById('comfort-income');
