--- a/index3.html
+++ b/index3.html
@@ -1,209 +1,189 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="uz">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>TMT TAXI</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-    <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-    }
-    .navbar {
-      background-color: #ffc107;
-    }
-    .hero {
-      background-color: #f8f9fa;
-      padding: 60px 0;
-      text-align: center;
-    }
-    .hero h1 {
-      font-weight: 700;
-    }
-    .hero p {
-      font-size: 1.25rem;
-    }
-    .cards-section {
-      padding: 30px 0;
-      background-color: #ffd740;
-    }
-    .card {
-      border: none;
-      border-radius: 15px;
-      margin: 15px 0;
-    }
-    .car-section {
-      padding: 50px 0;
-    }
-    .car-section h2 {
-      font-weight: 700;
-      margin-bottom: 30px;
-    }
-    .card-img-top {
-      height: 120px;
-      object-fit: contain;
-    }
-    .about-section {
-      background-color: #262626;
-      color: white;
-      padding: 60px 0;
-    }
-    .about-section h2 {
-      font-weight: 700;
-      margin-bottom: 30px;
-    }
-    .about-section p {
-      line-height: 1.6;
-    }
-    .stats {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin-top: 40px;
-      border-top: 2px solid #ffc107;
-      padding-top: 30px;
-    }
-    .stat-box {
-      text-align: center;
-      flex: 1;
-      min-width: 200px;
-      color: #ffc107;
-    }
-    .stat-box p {
-      margin: 0;
-      color: white;
-    }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TMT Taxi</title>
 
-    .selector-btn {
-      min-width: 60px;
-      min-height: 60px;
-      font-size: 1.2rem;
-      border-radius: 15px;
-    }
-    .active-btn {
-      border: 2px solid red !important;
-      color: red !important;
-    }
-  </style>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="./static/css/index3.css">
+
 </head>
 <body>
+<div class="offcanvas offcanvas-start" tabindex="-1" id="megaMenu">
+  <div class="offcanvas-header" style="background:#ffcc00;">
+    <h4 class="offcanvas-title">📋 TMT TAXI Menyu</h4>
+    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
+  </div>
 
-  <nav class="navbar navbar-expand-lg navbar-light">
+  <div class="offcanvas-body">
     <div class="container">
-        <a class="navbar-brand font-weight-bold" href="./base.html">TMT TAXI</a>
-        <div class="ml-auto d-flex align-items-center">
-          <a href="tel:+998773105555" class="btn btn-link">☎️ (77 310 55 55)</a>
-          <a href="tel:+998952435555" class="btn btn-link">☎️ (95 243 55 55)</a>
-          <a href="https://taxi.yandex.uz/ru_uz/" class="btn btn-dark">Taksi buyurtma qiling</a>
+      <div class="">
+        <!-- Haydovchilarga -->
+        <div>
+          <h3>Haydovchilarga</h3>
+          <ul class="list-unstyled">
+            <li><a href="index1.html">* Avto ijarasi</a></li>
+            <li><a href="index2.html">* Avtomobil sotib olish</a></li>
+            <li><a href="index3.html">* TMT Taxi tizimiga ulanish</a></li>
+            <li><a href="index4.html">* Taxi parklarimiz</a></li>
+          </ul>
         </div>
-    </div>
-  </nav>
+        <!-- Tariflar -->
+        <div>
+          <h3>Tariflar</h3>
+          <ul class="list-unstyled">
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/combo">* Ekanom</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/start">* Start</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/business">* Komfort</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/comfortplus">* Komfort+</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/vip">* Biznes</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/ultimate">* Premier</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/standart">* Elektro</a></li>
+          </ul>
+        </div>
+        <!-- Kompaniya haqida -->
+        <div>
+          <h3>Dastafka</h3>
+          <ul class="list-unstyled">
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/express">* Yetkazish</a></li>
+            <li><a href="https://taxi.yandex.uz/uz_uz/tashkent/tariff/cargo">* Yuk tashish</a></li>
+          </ul>
+        </div>
 
-  <!-- Hero section -->
-<div class="hero-section">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <h1 class="display-4 fw-bold">🚕 Taksiga ulaning — daromadni oshiring!</h1>
-        <p class="fs-5 mt-3">TMT TAXI orqali siz nafaqat ishlaysiz, balki ko‘proq daromad topasiz! Bizning platformamiz orqali ulanish sizga qo‘shimcha buyurtmalar, bonuslar va ko‘proq erkinlik beradi.
-      </div>
-      <div class="col-md-6">
-        <img src="photo_taxi.jpg" alt="Taxi" class="img-fluid rounded">
       </div>
     </div>
   </div>
 </div>
-
-
-  <section class="app-section py-5">
+<!-- HEADER -->
+<!-- FIXED NAVBAR -->
+<nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background:#ffcc00;">
   <div class="container">
-    <div class="row align-items-center">
-
-      <!-- Chap qism: Matn -->
-      <div class="col-md-6 mb-4 mb-md-0">
-        <h1 class="fw-bold display-5">📱 Shaxsiy mobil ilova — haydovchilar uchun qulaylik!</h1>
-        <p class="fs-5 mt-3">
-          🚖 TMT TAXI endi o‘zining haydovchilariga mo‘ljallangan maxsus mobil ilovaga ega!
-        </p>
-      </div>
-
-      <!-- O'ng qism: Rasm -->
-      <div class="col-md-6 text-center">
-        <img src="./didox.jpg" alt="Mobil Ilova" class="img-fluid">
-      </div>
-
+     <button class="btn btn-outline-dark" type="button" data-bs-toggle="offcanvas" data-bs-target="#megaMenu">
+      ☰
+    </button>
+    <a class="navbar-brand fw-bold" href="index.html">🚖 TMT TAXI</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item"><a class="nav-link fw-bold" href="#">Taksi buyurtma qilish</a></li>
+      </ul>
+      <span class="ms-3 fw-bold">📞 +998 95 243 55 55</span>
+      <span class="ms-3 fw-bold">📞 +998 77 310 55 55</span>
     </div>
   </div>
-</section>
+</nav>
 
-  <section class="conditions-section py-5 bg-light">
+<div style="padding-top: 80px;"></div>
+
+<section class="py-5">
   <div class="container">
     <div class="row align-items-center">
 
-      <!-- Chap qism: Katta sarlavha -->
-      <div class="col-md-6 mb-4 mb-md-0">
-        <h1 class="display-4 fw-semibold">
-         🔗 TMT TAXI’ga ulanish shartlari
+      <!-- Chapdagi matn qismi -->
+      <div class="col-lg-6">
+        <h1 class="display-4 fw-bold mb-3">
+          TMT Taxi-ga ulanish
         </h1>
+        <p class="lead mb-4">
+          Buyurtmalarning qo'shimcha manbai (korporativ mijozlar)
+        </p>
+        <p class="lead mb-4">
+          TMT Taxi komissiya 3%
+        </p>
+        <p class="lead mb-4">
+          TMT Taxi-da balansni naxt to'lov orqali to'ldrilsa 10% keshbek
+        </p>
+        <p class="lead mb-4">
+          O'rtacha hisobi yuqori bo'lgan buyurtmalar
+        </p>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-danger btn-lg fw-bold">
+          • ULANISH
+        </a>
       </div>
 
-      <!-- O‘ng qism: Tavsif matni -->
-      <div class="col-md-6">
-        <p class="fs-5">
-            📋 Ulanishlar bo‘yicha asosiy talab:<br>
-❌ Federal Soliq Xizmatida ro‘yxatdan o‘tmagan (yakka tartibdagi tadbirkor yoki professional daromad solig‘i to‘lovchisi bo‘lmagan) jismoniy shaxslar bilan hamkorlik qila olmaymiz.
-        </p>
+      <!-- O‘ngdagi rasm qismi -->
+      <div class="col-lg-6 text-center">
+        <img src="./static/img/1.png" alt="TMT Taxi Avtomobil" class="img-fluid rounded shadow">
       </div>
 
     </div>
   </div>
 </section>
 
-<section class="py-5 bg-light">
+<section class="mobile-app py-5">
+  <div class="container">
+    <div class="row align-items-center">
+
+      <!-- Chap qismi -->
+      <div class="col-md-6">
+        <h2 class="fw-bold mb-4">Haydovchilar uchun o'z mobil ilovasi</h2>
+        <div class="mb-3">
+          <img src="https://cdn-icons-png.flaticon.com/512/3062/3062634.png" width="50">
+        </div>
+        <p class="fs-5">
+          <span class="fw-bold">TMT Taxi</span> haydovchilarimiz uchun
+          <span class="text-danger fw-bold">mobil ilova ishlab chiqildi</span>
+        </p>
+        <a href="https://t.me/didox_s_bot" class="btn btn-warning fw-bold px-4 py-2 mt-3">
+          • ULANISH
+        </a>
+      </div>
+      <!-- O'ng qismi -->
+      <div class="col-md-6 text-center">
+        <img src="./static/img/didox.png" alt="Mobil ilova" class="img-fluid rounded shadow">
+      </div>
+    </div>
+  </div>
+</section>
+<section class="requirements-section py-5">
   <div class="container">
     <div class="row">
-
-      <!-- Chap ustun -->
-      <div class="col-md-6 mb-4 mb-md-0">
-        <h3 class="fw-bold mb-4">👤 Haydovchi bo‘lish uchun talablar:</h3>
-        <ul class="list-unstyled fs-5">
-          <li class="mb-3"><span class="text-danger">•</span>✅ 23 yoshdan katta, kamida 3 yillik haydovchilik tajribasi</li>
-          <li class="mb-3"><span class="text-danger">•</span> ✅ O‘zbekiston fuqarosi yoki O‘zbekistonda yashash uchun ruxsatnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> ✅ O‘zbekiston fuqarosi yoki O‘zbekiston Respublikasidagi oliy ta’lim muassasasida o‘qiyotgan bo‘lish</li>
-          <li class="mb-3"><span class="text-danger">•</span> ✅ Yakka tartibdagi tadbirkor (YTT) (Biz YTT ochishda yordam beramiz)</li>
+      <!-- Chap taraf -->
+      <div class="col-md-6 mb-4">
+        <div class="d-flex align-items-center mb-3">
+          <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" width="40" class="me-2">
+          <h3 class="fw-bold m-0">Haydovchilar uchun talablar</h3>
+        </div>
+        <ul class="list-unstyled">
+          <li class="mb-2">Yoshi 23 yoshdan katta bo‘lishi</li>
+          <li class="mb-2">O‘zbekiston fuqaroligi yoki rasmiy yashash huquqi</li>
+          <li class="mb-2">O‘zbek tilini suhbat darajasida bilish (qo‘shimcha rus tili bilish afzal)</li>
+          <li class="mb-2">Haydovchilik tajribasi kamida 3 yil</li>
+          <li class="mb-2">Sudlanmaganlik haqida ma’lumotnoma (zarurat bo‘lsa)</li>
+          <li class="mb-2">Tartibli va mijozlarga hurmat bilan munosabatda bo‘lish</li>
         </ul>
-        <h3 class="fw-bold mb-4">🚘 Transport vositasi bo‘yicha talablar:</h3>
-        <ul class="list-unstyled fs-5">
-          <li class="mb-3"><span class="text-danger">•</span>✅ Litsenziyasi bo‘lgan, yo‘lovchi tashishga ruxsat etilgan avtomobil</li>
-          <li class="mb-3"><span class="text-danger">•</span> ✅ Mashina shaxsiy yoki boshqa parkdan ijaraga olingan bo‘lishi mumkin</li>
-          <li class="mb-3"><span class="text-danger">•</span> ✅ Avtomobilda boshqa brend stikerlari bo‘lsa ham ishlashingiz mumkin</li>
-        </ul>
-        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning fw-bold mt-4 px-4 py-2">•&nbsp;&nbsp;ULANISH</a>
+        <a href="https://t.me/Tashmedia_trans" class="btn btn-warning fw-bold mt-4">• KONSULTATSIYA OLING</a>
       </div>
 
-      <!-- O‘ng ustun -->
+      <!-- O'ng taraf -->
       <div class="col-md-6">
-        <h3 class="fw-bold mb-4">📝 Ulanish uchun zarur hujjatlar:</h3>
-        <ul class="list-unstyled fs-5">
-          <li class="mb-3"><span class="text-danger">•</span>📌 O‘zbekiston pasporti yoki yashash uchun ruxsatnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> 🎓 O‘zbekiston yoki uning oliy o‘quv yurtlarida o‘qiyotganligini tasdiqlovchi hujjat (agar talaba bo‘lsa)</li>
-          <li class="mb-3"><span class="text-danger">•</span> 📄 STS (soliq to‘lovchi sertifikati)</li>
-          <li class="mb-3"><span class="text-danger">•</span> 💳 Yakka tartibdagi tadbirkor nomiga ochilgan joriy hisob raqami
-(SMZ haydovchilari uchun mablag‘lar Tinkoff yoki Sberbank orqali o‘tkaziladi)</li>
-          <li class="mb-3"><span class="text-danger">•</span> 🧾 Sudlanmaganlik haqida guvohnoma</li>
-          <li class="mb-3"><span class="text-danger">•</span> ☎️ Aloqada bo‘lish uchun yaroqli telefon raqami</li>
-          <li class="mb-3"><span class="text-danger">•</span> Ish jarayonida siz bilan bog‘lanish uchun yaroqli telefon raqami</li>
+        <div class="d-flex align-items-center mb-3">
+          <img src="https://cdn-icons-png.flaticon.com/512/1828/1828640.png" width="40" class="me-2">
+          <h3 class="fw-bold m-0">TMT Taxi bonuslari</h3>
+        </div>
+        <ul class="list-unstyled">
+          <li class="mb-2">Taksi faoliyatini yuritish uchun o‘z-o‘zini band qilish xizmatini rasmiylashtirib beramiz</li>
+          <li class="mb-2">Litsenziya, sug‘urta va ruxsatnoma olishda texnik yordam ko‘rsatiladi</li>
+          <li class="mb-2">Avtomobilingizga servis xizmatlarini bepul diagnostika asosida ko‘rsatamiz</li>
+          <li class="mb-2">Balansirovka, razval xizmatlari tekin</li>
+          <li class="mb-2">Moy almashtirish va filtrlarni arzon narxda almashtirish</li>
+          <li class="mb-2">Elektrik xizmatlari bo‘yicha bepul maslahatlar va 50% chegirma xizmati</li>
+          <li class="mb-2">Mator va xadavoy (yurish qismi) ta’miri 50% chegirma asosida</li>
+          <li class="mb-2">Vulkanizatsiya va shinalar tekin xizmatlar</li>
+          <li class="mb-2">Har hafta konkurs va aksiyalar, g‘oliblarga bonus pullari</li>
+          <li class="mb-2">Doimiy haydovchilar uchun oylik rag‘batlantirish va sovg‘alar</li>
+          <li class="mb-2">Yo‘l harakati qoidalarini buzmaslik uchun bepul trening va maslahatlar</li>
+          <li class="mb-2">Har 6 oyda eng faol haydovchilar uchun qo‘shimcha mukofotlar</li>
         </ul>
-          <h3 class="fw-bold mb-4">📞 TMT TAXI — siz bilan qonuniy, halol va uzoq muddatli hamkorlik tarafdori.
-So‘rov qoldiring — biz siz bilan bog‘lanamiz va hamma bosqichlarda yordam beramiz!</h3>
       </div>
-
     </div>
   </div>
 </section>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS -->
+<script src="./static/js/index2.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
